Make more testable.
 * 3 new lightweight interfaces. `RandomGenerator`, `KeySource` and `SignatureGenerator`.
 * Added more tests.